@@ -8,3 +8,4 @@ void neug_prng_reseed (void);
 uint32_t neug_get (int kick);
 void neug_kick_filling (void);
 void neug_flush (void);
+void neug_wait_full (void);
